--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,6 @@
 platform = atmelavr
 board = pro8MHzatmega328
 framework = arduino
-lib_deps = milesburton/DallasTemperature@^3.9.1
+lib_deps = 
+	milesburton/DallasTemperature@^3.9.1
+	bxparks/AUnit@^1.6.1
