Improvements, Current uptime is ~6Hours with the 2 Caps

--- a/BoilerSensorTX/platformio.ini
+++ b/BoilerSensorTX/platformio.ini
@@ -16,4 +16,5 @@ lib_deps =
 	milesburton/DallasTemperature@^3.9.1
 	bxparks/AUnit@^1.6.1
 
-upload_port=COM6
+upload_port=COM3
+monitor_speed = 19200
