In the meantime, PySerial changed a parameter name

--- a/BoilerSensorRX/Dockerfile
+++ b/BoilerSensorRX/Dockerfile
@@ -17,9 +17,9 @@
 FROM python:latest
 
 RUN pip install --no-cache-dir --upgrade pip && \
-    pip install --no-cache-dir pyyaml paho-mqtt pyserial crc8
+    pip install --no-cache-dir pyyaml paho-mqtt pyserial crc8 RPi.GPIO
 
 WORKDIR /usr/app/src
 COPY ./ha_mqtt_device.py ./
-COPY ./reciver.py ./
+COPY ./*.py ./
 CMD [ "python", "./reciver.py"]
